# package-repository-server

./: .dockerignore  .gitignore  Makefile  README.md
ci-examples/: azure-devops.yml  bitbucket-pipelines.yml  drone-ci.yml  github-actions.yml  gitlab-ci.yml  jenkins-pipeline.groovy
config/: config.yaml.example  ferron-tls.yaml  ferron.yaml
docker/: Dockerfile  Dockerfile.standalone  docker-compose.tls.yml  docker-compose.yml  supervisord.conf
docker/scripts/: entrypoint.sh  process-alpine.sh  process-arch.sh  process-deb.sh  process-rpm.sh  setup-ssl.sh
helm/package-repo/: Chart.yaml  values.yaml
helm/package-repo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
server/: Cargo.toml
server/src/: main.rs
server/src/handlers/: health.rs  mod.rs  packages.rs  setup.rs  upload.rs
server/src/processor/: mod.rs
server/src/storage/: mod.rs
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/azure/: main.tf  outputs.tf  variables.tf
terraform/digitalocean/: main.tf  outputs.tf  variables.tf
terraform/gcp/: main.tf  outputs.tf  variables.tf
terraform/modules/package-repo/: main.tf  outputs.tf  variables.tf
terraform/vultr/: main.tf  outputs.tf  variables.tf
