[package]
name = "package-repo-server"
version = "1.0.0"
edition = "2021"
description = "Multi-format package repository server API"
authors = ["Package Repository"]

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
config = "0.14"
aws-sdk-s3 = "1"
aws-config = "1"
bytes = "1"
mime_guess = "2"
sanitize-filename = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
